<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>ch.eitchnet</groupId>
    <artifactId>LumineLog</artifactId>
    <version>0.1.0-SNAPSHOT</version>
    <name>LumineLog</name>
    <description>LumineLog is a JavaFX Log Viewer designed for high performance and low CPU overhead (especially during tailing)</description>
    <url>https://github.com/eitch/LumineLog</url>
    <inceptionYear>2026</inceptionYear>

    <developers>
        <developer>
            <id>eitch</id>
            <name>Robert von Burg</name>
            <email>eitch@eitchnet.ch</email>
        </developer>
    </developers>

    <licenses>
        <license>
            <name>GNU General Public License v2.0</name>
            <url>https://www.gnu.org/licenses/gpl-2.0.txt</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <scm>
        <connection>scm:git:https://github.com/eitch/LumineLog.git</connection>
        <developerConnection>scm:git:ssh://github.com/eitch/LumineLog.git</developerConnection>
        <url>https://github.com/eitch/LumineLog</url>
        <tag>HEAD</tag>
    </scm>

    <properties>
        <jarFinalName>${project.artifactId}</jarFinalName>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit.version>5.12.1</junit.version>

        <!-- Azul Zulu JRE download coordinates (adjust as needed) -->
        <!-- These URLs can be updated to newer builds; see https://www.azul.com/downloads/?package=jre -->
        <zulu.linux.name>zulu25.32.21-ca-fx-jdk25.0.2-linux_x64</zulu.linux.name>
        <zulu.linux.url>https://cdn.azul.com/zulu/bin/${zulu.linux.name}.tar.gz</zulu.linux.url>
        <zulu.linux.sha256>2a97720c043166381fb6e1e7884969ac9d9149107678ec2f424d50697c55fa49</zulu.linux.sha256>
        <zulu.windows.name>zulu25.32.21-ca-fx-jdk25.0.2-win_x64</zulu.windows.name>
        <zulu.windows.url>https://cdn.azul.com/zulu/bin/${zulu.windows.name}.zip</zulu.windows.url>
        <zulu.windows.sha256>50d428552aef90f1f36117f68f03a7f52f63753ade454b1319ea4ae44b52ac19</zulu.windows.sha256>

        <!-- jrealeaser -->
        <app.main.module>ch.eitchnet.luminelog</app.main.module>
        <app.main.class>ch.eitchnet.luminelog.LumineLogApplication</app.main.class>
        <java.version>25</java.version>
        <jdk.version>25.0.2</jdk.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven.compiler.release>${java.version}</maven.compiler.release>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>23.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>23.0.2</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.17</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.25</version>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.12.1</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.6.3</version>
                <configuration>
                    <mainClass>${app.main.class}</mainClass>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>${app.main.class}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <executions>
                    <execution>
                        <!-- Default configuration for running with: mvn clean javafx:run -->
                        <id>default-cli</id>
                        <configuration>
                            <mainClass>${app.main.module}/${app.main.class}</mainClass>
                            <options>--enable-native-access=javafx.graphics</options>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>
                                ${project.build.directory}/libs
                            </outputDirectory>
                            <includeScope>compile</includeScope>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

    <profiles>
        <profile>
            <id>release</id>
            <build>
                <finalName>${jarFinalName}-${project.version}</finalName>
                <plugins>

                    <plugin>
                        <groupId>org.jreleaser</groupId>
                        <artifactId>jdks-maven-plugin</artifactId>
                        <version>1.23.0</version>
                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>setup-jdks</goal>
                                </goals>
                                <configuration>
                                    <jdks>
                                        <jdk>
                                            <name>jdk-linux</name>
                                            <platform>linux-x86_64</platform>
                                            <url>${zulu.linux.url}</url>
                                            <checksum>${zulu.linux.sha256}</checksum>
                                        </jdk>
                                        <jdk>
                                            <name>jdk-windows</name>
                                            <platform>windows-x86_64</platform>
                                            <url>${zulu.windows.url}</url>
                                            <checksum>${zulu.windows.sha256}</checksum>
                                        </jdk>
                                    </jdks>
                                </configuration>

                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.jreleaser</groupId>
                        <artifactId>jreleaser-maven-plugin</artifactId>
                        <version>1.23.0</version>

                        <executions>
                            <execution>
                                <phase>package</phase>
                                <goals>
                                    <goal>assemble</goal>
                                </goals>

                                <configuration>
                                    <jreleaser>
                                        <project>
                                            <name>${project.name}</name>
                                            <authors>
                                                <author>eitch</author>
                                            </authors>
                                            <maintainers>
                                                <maintainer>eitch</maintainer>
                                            </maintainers>
                                        </project>

                                        <release>
                                            <github>
                                                <overwrite>true</overwrite>
                                                <sign>true</sign>
                                            </github>
                                        </release>

                                        <signing>
                                            <active>ALWAYS</active>
                                            <pgp>
                                                <active>ALWAYS</active>
                                                <command>
                                                    <executable>gpg</executable>
                                                    <keyName>${gpg.keyname}</keyName>
                                                </command>
                                            </pgp>
                                        </signing>

                                        <assemble>
                                            <jlink>
                                                <LumineLog>
                                                    <active>ALWAYS</active>
                                                    <java>
                                                        <mainClass>${app.main.class}</mainClass>
                                                        <mainModule>${app.main.module}</mainModule>
                                                        <jvmOptions>
                                                            <universal>
                                                                --enable-native-access=javafx.graphics
                                                            </universal>
                                                        </jvmOptions>
                                                    </java>
                                                    <imageName>${jarFinalName}-${project.version}</imageName>
                                                    <executable>${jarFinalName}</executable>

                                                    <mainJar>
                                                        <path>target/{{distributionName}}-{{projectVersion}}.jar</path>
                                                    </mainJar>
                                                    <additionalModuleNames>
                                                        javafx.base,javafx.graphics,javafx.controls,javafx.swing
                                                    </additionalModuleNames>
                                                    <jdeps>
                                                        <multiRelease>${java.version}</multiRelease>
                                                        <ignoreMissingDeps>true</ignoreMissingDeps>
                                                    </jdeps>
                                                    <jar>
                                                        <pattern>target/libs/*.jar</pattern>
                                                    </jar>
                                                    <jdk>
                                                        <path>target/jdks/jdk-linux/${zulu.linux.name}</path>
                                                        <platform>linux</platform>
                                                    </jdk>
                                                    <targetJdks>
                                                        <targetJdk>
                                                            <path>target/jdks/jdk-linux/${zulu.linux.name}</path>
                                                            <platform>linux</platform>
                                                        </targetJdk>
                                                        <targetJdk>
                                                            <path>target/jdks/jdk-windows/${zulu.windows.name}</path>
                                                            <platform>windows</platform>
                                                        </targetJdk>
                                                    </targetJdks>
                                                </LumineLog>
                                            </jlink>
                                        </assemble>
                                    </jreleaser>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>

                </plugins>
            </build>
        </profile>

    </profiles>

</project>